# bentolibc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  bentolibc.cfg  main.c
src/command/: command.c  command.h  dispatcher.c  dispatcher.h
src/config/: config.c  config.h
src/elf/: elfdump.c  elfdump.h  onegadget.c  onegadget.h
src/logging/: logger.c  logger.h
src/sql/: postgresql.c  postgresql.h
test/: CMakeLists.txt  test_main.c
